kube_develop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: website-microservice
  namespace: dwetter-develop
spec:
  selector:
    app: website-microservice
  ports:
  - port: 80
    targetPort: 80
