kube_develop/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-develop"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: website-microservice-ingress
  namespace: dwetter-develop
spec:
  rules:
    - host: develop.dwetter.nl
      http:
        paths:
          - backend:
              serviceName: website-microservice
              servicePort: 80
  tls:
    - hosts: 
        - develop.dwetter.nl
      secretName: website-microservice-tls
status:
  loadBalancer:
    ingress:
      - {}
